[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Kurland.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menus/pause_menu/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://src/menus/MenuAudioPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -200.0
margin_right = 236.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 472.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 472.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
margin_left = 118.0
margin_top = 14.0
margin_right = 353.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1
uppercase = true

[node name="ResumeContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 472.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer/ResumeContainer"]
margin_left = 153.0
margin_top = 20.0
margin_right = 319.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
flat = true

[node name="OptionsContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 472.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/OptionsContainer"]
margin_left = 1.0
margin_top = 20.0
margin_right = 470.0
margin_bottom = 77.0

[node name="WindowedButton" type="Button" parent="CenterContainer/VBoxContainer/OptionsContainer/HBoxContainer"]
margin_right = 230.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Windowed"
flat = true

[node name="Separator" type="Label" parent="CenterContainer/VBoxContainer/OptionsContainer/HBoxContainer"]
margin_left = 234.0
margin_top = 3.0
margin_right = 249.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "/"

[node name="FullscreenButton" type="Button" parent="CenterContainer/VBoxContainer/OptionsContainer/HBoxContainer"]
margin_left = 253.0
margin_right = 469.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Fullscreen"
flat = true

[node name="QuitContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 303.0
margin_right = 472.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/QuitContainer"]
margin_left = 185.0
margin_top = 20.0
margin_right = 287.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true

[node name="MenuAudioPlayer" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsContainer/HBoxContainer/WindowedButton" to="." method="_on_WindowedButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsContainer/HBoxContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
